# zeMichael

./: Makefile  README.md  pyproject.toml
tests/: __init__.py
tests/unit_tests/lexer/: lexer_test.py
tests/unit_tests/parser/: parser_test.py
zemichael/: lexer.py  parser.py
zemichael/datatypes/: ast.py  token.py
zemichael/lexer/: lexer.py  token.py
